--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,17 @@
               <li class=city_link>
               <% if @current_user.present?%>
                   <%= link_to "Welcome, " + @current_user.username, user_path(@current_user.id)%>
-                  <% else %>
-                  <%= link_to 'Login', login_path%> /
-                  <%= link_to 'Sign Up', new_user_path %>
+              <% else %>
+                  <%= link_to 'Login', login_path%>
               <% end %>
               </li>
+              <li class=city_link>
+                <% if @current_user.present?%>
+                    <%= link_to "Welcome, " + @current_user.username, user_path(@current_user.id)%>
+                <% else %>
+                <%= link_to 'Sign Up', new_user_path %>
+                <% end %>
+                </li>
               <li class=city_link>
                 <%= link_to 'Home', pages_path %>
               </li>
