--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <ul>
               <li>
               <% if @current_user.present?%>
-                  <%= link_to "Welcome, " + @current_user.username, user_path(@current_user.id)%>
+                  <%= link_to "Welcome, " + @current_user.username, "/profile" %>
                   <% else %>
                   <%= link_to 'Login', login_path%> /
                   <%= link_to 'Sign Up', new_user_path %>
