--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-  <h1 class="post_title"><%= @post.title%></h1>
+  <h1 class="post_title"><%= @post.title%></h1><strong><span>By:&nbsp;&nbsp;</span></strong><%= link_to @post.user.username, user_path(@post.user) %>&nbsp;&nbsp;
   <i id="btn_like" class="fa fa-thumbs-<%=  @current_user.liked_posts.include?( @post ) ? 'down' : 'up' %>"></i>
 
     <span id="span_likes"><%= @post.liked_by.count %> </span>
@@ -6,13 +6,6 @@
   <%= link_to "Edit", edit_post_path(@post), class: "edit_link"%> |
   <%= link_to "Delete", post_path(@post), class: "edit_link", method: :delete%>
   <% end %>
-
-  <!-- <% @post.liked_by.each do | u |%>
-    <% if u.username == @current_user.username %>
-      <%= submit_tag 'Like', id: :btn_like %>
-    <% end %>
-  <% end %> -->
-
 
   <div class="content_box">
   <% if @post.image.present? %>
