--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -30,37 +30,23 @@
         </div>
     </div>
 
-
-
-
     <div class="col-xs-6 col-sm-6">
       <div id="map"> </div>
     </div>
 
   </div>
 
-
-<!-- <div class="content_box"> -->
-  <!-- <div class="image_show">
-    <% if @city.image.present? %>
-      <%= cl_image_tag @city.image %>
-    <% else %>
-      <%= cl_image_tag "no_image.png" %>
-    <% end %>
-  </div> -->
-
 </div>
 </div>
 
 <script>
   function initMap() {
-    // var myLatLng = {lat: -33.87145, lng: 151.20443};
     var bounds = new google.maps.LatLngBounds();
     var map = new google.maps.Map(document.getElementById('map'),{
       zoom: 3,
       center: bounds
     });
-    // getting products lat, lng, name from instance variable
+    // getting posts lat, lng, name from instance variable
     var posts = <%= @posts.map{ |p| {lat: p.latitude, lng: p.longitude, name: p.title } }.to_json.html_safe %>;
     // looping over products to make marker for each product
     for(let i=0; i < posts.length; i++)
