minor changes for posts n users display

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -392,6 +392,7 @@ body {
       float: right;
       right: 0px;
       min-height: 100%;
+      // background-color: rgba(154, 154, 154, 0.3);
       &.small_content {
         padding-left: 10px;
         width: calc(100% - 320px);
