--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -42,6 +42,7 @@
 <script>
   function initMap() {
     var bounds = new google.maps.LatLngBounds();
+    var infowindow = new google.maps.InfoWindow();
     var map = new google.maps.Map(document.getElementById('map'),{
       zoom: 3,
       center: bounds
@@ -51,19 +52,19 @@
     // looping over products to make marker for each product
     for(let i=0; i < posts.length; i++)
     {
+      var post = posts[i];
       var marker = new google.maps.Marker({
-        position: posts[i],
+        position: post,
         map: map,
-        title: posts[i].name
+        title: post.name,
+        info: `<div id="content"><a href="/posts/${post.id}">${post.name}</a></div>`
       });
-      var contentString = '<div id="content">'+ `<a href="http://localhost:3000/posts/${posts[i].id}">${posts[i].name}</a>` +'</div>';
-      var infowindow = new google.maps.InfoWindow();
-      google.maps.event.addListener(marker, 'click', function(contentString){
-      return function(){
-        infowindow.setContent(contentString);
-        infowindow.open(map, this);
-      }
-    }(contentString));
+      google.maps.event.addListener(marker, 'click', function(){
+        infowindow.close(); // Close previously opened infowindow
+        infowindow.setContent( this.info );
+        infowindow.open(map, this );
+      });
+
       bounds.extend(marker.position);
     }
     map.fitBounds( bounds );
