--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <h3>Welcome to my travel page</h3>
 <!-- <div id="articles" data-article="<%= @user.address %>">Loading news from your hometown now...</div>  -->
 
-
+<%= link_to "Create New Post" , new_post_path %>
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
