spacing for comment button

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
               Comments:
               <%= text_area_tag id="txt_area_comments" %>
               <%= submit_tag 'Post', id: :btn_comment%>
-          </div>
+          </div><br>
           <div id="comments_div">
 
           </div>
