--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
         <% @posts.each do |post| %>
           <li>
           <%= link_to post.title, post_path(post), class: 'post_link' %>
-          <%= post.liked_by.count %> likes.
+          <%= pluralize post.liked_by.count, 'like' %>.
           </li>
         <% end %>
       </ul>
