--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,18 +1,36 @@
-<h1><strong><%= @city.name%></strong></h1>
-<%= link_to "Edit", edit_city_path(@city), class: "edit_link"%> |
-<%= link_to "Delete", city_path(@city), class: "edit_link", method: :delete %>
 
-<% if @city.photos.any? %>
-  <div class="content_box">
-    <div id="slideshow">
-      <% @city.photos.each do |p| %>
-        <div class="slideshow_content_box">
-          <%= cl_image_tag p.image, {class: "header_image"} %>
-        </div>
-      <% end  %>
+
+<div class="content_box">
+
+    <div id="city_title_container">
+      <h1 class="city_heading"><strong><%= @city.name%></strong></h1>
+      <% if @current_user.present? && @current_user.admin? %>
+        <%= button_to "Edit", edit_city_path(@city), class: "btn btn-primary city_edit"%>
+        <%= button_to "Delete", city_path(@city), class: "btn btn-danger city_delete", method: :delete %>
+      <% end %>
+      <%= button_to 'Add Post',
+         new_post_path,
+         method: :get,
+         params: {city_id: @city.id},
+         class: 'btn btn-primary city_post'
+      %>
     </div>
-<% end %>
+
+
+    <div id="slideshow">
+
+    <% if @city.photos.any? %>
+          <% @city.photos.each do |p| %>
+            <div class="slideshow_content_box">
+              <%= cl_image_tag p.image, {class: "header_image"} %>
+            </div>
+          <% end  %>
+
+    <% end %>
+  </div><!-- #slideshow -->
+
 <br><br>
+
 
 <div class="container">
   <div class="row">
