--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,10 @@
 <h3>Welcome to my travel page</h3>
 <!-- <div id="articles" data-article="<%= @user.address %>">Loading news from your hometown now...</div>  -->
 
-<%= link_to "Create New Post" , new_post_path %>
+<%= button_to "Add Post" , new_post_path, class: "btn btn-primary" %>
+<% if @current_user.admin? %>
+  <%= button_to 'Add City', new_city_path, class: "btn btn-primary" %>
+<% end %>
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
