--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,6 +85,7 @@
   // width: 800px;
   // margin-left: 200px;
   border-style: outset;
+  border-radius: 15px;
   background-color: rgba(154, 154, 154, 0.3);
   // padding-left: 20px;
 }
@@ -92,10 +93,25 @@
   display: inline;
   // padding-right: 20px;
 }
-
 .commentbox {
   margin-bottom: 0;
-  
+}
+
+
+// #weather {
+//   border-style: outset;
+//   background-color: rgba(154, 154, 154, 0.3);
+// }
+
+#weather {
+  // position: absolute;
+  // left: 20%;
+  text-align: center;
+  border-style: outset;
+  background-color: rgba(154, 154, 154, 0.3);
+  width: 100%;
+  border-radius: 15px;
+
 }
 
 #articles {
@@ -328,7 +344,7 @@ h2 {
   top: 300px;
   left: 50%;
   width:30em;
-  height:18em;
+  height:21em;
   margin-top: -9em; /*set to a negative number 1/2 of your height*/
   margin-left: -15em; /*set to a negative number 1/2 of your width*/
   border: 1px rgb(75, 169, 237);
@@ -352,7 +368,7 @@ body {
   position: relative;
   font-family: 'Open Sans', sans-serif;
   background-attachment: fixed;
-  background-image: url('https://images.pexels.com/photos/21859/pexels-photo.jpg');
+  background-image: url('https://www.theriversouth.org/wp-content/uploads/2016/01/Light-Grey-Background-Tumblr-8.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
