--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -2,9 +2,9 @@
 <div class="content_box">
   <div id="city_title_container">
       <h1 class="city_heading"><strong id="citynamestrong"><%= @city.name%></strong></h1>
- <% if @current_user.present? %>
-         <%= button_to "Edit", edit_city_path(@city), class: "btn btn-primary city_edit"%>
-       <%= button_to "Delete", city_path(@city), class: "btn btn-danger city_delete", method: :delete %>
+ <% if @current_user.present? && @current_user.admin%>
+         <%= link_to "Edit", edit_city_path(@city)%> | 
+       <%= link_to "Delete", city_path(@city), method: :delete %>
      <% end %>
     <%= button_to 'Add Post',
        new_post_path,
