--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,11 @@
+<% if flash[:errors] %>
+  <strong>Please correct the following errors:</strong>
+  <ol>
+    <% flash[:errors].each do |e| %>
+      <li><%= e %></li>
+    <% end %>
+  </ol>
+<% end %>
 <div id="content_body">
 <%= form_for(@post, :html => {:multipart => true}) do |f| %>
   <%= f.label :title, 'Title :'%>
