--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -219,6 +219,7 @@ img.post_main {
   overflow: auto;
   display: inline-block;
   max-width: 100%;
+  border-radius: 25px;
 }
 
 
@@ -231,6 +232,11 @@ img:hover {
 p {
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+img.photos {
+  max-width: 350px;
+  border-radius: 25px;
 }
 
 
