--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,233 +14,26 @@
  *= require_self
 
  */
-//
-//
-// html, body {
-//   font-family: Open Sans;
-//   font-size: 18px;
-//   line-height: 28px;
-// }
 
 @import "bootstrap";
-// google map for city show and blog posts show
-#map {
-  // height: 50% !important;
-  width: 100% !important;
-  padding-top: 100%; // using padding top to ensure aspect ratio.
-  overflow: hidden !important;
-  border-radius: 25px;
-}
-
-// header image
-.header_image {
-  // height: 200px;
-  // width:
-
-  height: 350px;
-  // width: 1240px;
-  width: 100%;
-}
-
-// show page for profile, ie User show page
-
-
-
-#posts_div:hover{
-  filter: saturate(120%);
-}
-//
-#txt_area_comments{
-  margin-left: 0px;
-  height: 50px;
-  width: 400px;
-}
-
-.delete_comment{
-  font-size: 16px;
-  color: rgb(156, 77, 119) !important;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.delete_comment:hover{
-  font-weight: bold !important;
-}
-
-#comments_div > p {
-  text-align: left;
-  // margin-left: 50px;
-}
-#comments_div > a {
-  text-align: right;
-  float: right;
-}
-.comment_div{
-  text-align: left;
-  border-style: ridge;
-
-}
-#comments_div{
-
-  // width: 800px;
-  // margin-left: 200px;
-  border-style: outset;
-  border-radius: 15px;
-  background-color: rgba(154, 154, 154, 0.3);
-  // padding-left: 20px;
-}
-.post_title{
-  display: inline;
-  // padding-right: 20px;
-}
-.commentbox {
-  margin-bottom: 0;
-}
-
-
-// #weather {
-//   border-style: outset;
-//   background-color: rgba(154, 154, 154, 0.3);
-// }
-
-#weather {
-  // position: absolute;
-  // left: 20%;
-  text-align: center;
-  border-style: outset;
-  background-color: rgba(154, 154, 154, 0.3);
-  width: 100%;
-  border-radius: 15px;
-
-}
-
-#articles {
-  font-size: 16px;
-  color: rgb(156, 77, 119);
-}
-a#articles:hover {
-  font-weight: bold!important;
-  color: rgb(90, 17, 198)!important;
-}
-
-#postdisplay {
-  font-size: 16px;
-}
-
-.post_link {
-  font-size: 16px;
-  color: rgb(156, 77, 119);
-}
-
-/* homepage display parallax scrolling */
-#welcome_page {
-  letter-spacing: -15px;
-  font-family: 'Open Sans', sans-serif;
-  color: white;
-  text-align: center;
-  font-size: 170px;
-  font-weight: 600;
-  line-height: 200px;
-}
-
-.MainContainer {
-  // perspective: 1px;
-  // perspective: 0px;
-  transform-style: preserve-3d;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
-
-}
-
-.ContentContainer {
-  position: relative;
-  display: block;
-  background-color: white;
-  z-index: 1;
-  // width: 1355px;
-  width: 100%;
-  // margin-left: 1px;
-}
-
-.Content {
-  max-width: 850px;
-  margin: 0 auto;
-  padding: 35px 0;
-}
-
-.intro {
-  margin: 75px 0;
-}
-
-
-.ParallaxContainer {
-  display: flex;
-  flex: 1 0 auto;
-  position: relative;
-  z-index: -1;
-  // height: 50vh;
-  height: 107vh;
-  // width: 1355px;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  transform: translateZ(-1px) scale(2);
-  background: url('http://www.victorianielsens.se/wp-content/uploads/2017/10/travel.jpg');
-  background-size: cover;
-  background-color: rgb(250,228, 216);
-}
-
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
 
-
-.MainContainer {
-  perspective: 1px;
-  transform-style: preserve-3d;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
+* {
+  padding: 0;
+  margin: 0;
+  color: rgba(42, 42, 42, 0.8);
 }
 
-.ContentContainer {
-  display: block;
-  position: relative;
-  background-color: white;
-  z-index: 1;
+html, body {
+  height: 100%;
 }
 
-img.post_main {
-  width: 300px;
-  height: 200px;
-  margin: 2px;
-  filter: grayscale(70%) contrast(100%);
-  transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
-  box-shadow: 0 0 15px rgba(0,0,0,0.4);
-  overflow: auto;
-  display: inline-block;
-  max-width: 100%;
-  border-radius: 25px;
+h2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-
-
-
-img:hover {
-  filter: saturate(80%);
-}
-
-p {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
-img.photos {
-  max-width: 350px;
-  border-radius: 25px;
-}
-
-
-
+/* links */
 a {
   text-decoration: none;
   color: rgba(42, 42, 42, 0.8);
@@ -275,7 +68,81 @@ a {
   font-weight: bold;
 }
 
+#articles {
+  font-size: 16px;
+  color: rgb(156, 77, 119);
+}
+a#articles:hover {
+  font-weight: bold!important;
+  color: rgb(90, 17, 198)!important;
+}
 
+#postdisplay {
+  font-size: 16px;
+}
+
+.post_link {
+  font-size: 16px;
+  color: rgb(156, 77, 119);
+}
+
+li {
+  list-style: none;
+}
+
+.edit_link {
+  font-size: 18px;
+}
+
+p {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+/* images */
+
+img.post_main {
+  width: 300px;
+  height: 200px;
+  margin: 2px;
+  filter: grayscale(70%) contrast(100%);
+  transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  overflow: auto;
+  display: inline-block;
+  max-width: 100%;
+  border-radius: 25px;
+}
+
+
+img:hover {
+  filter: saturate(80%);
+}
+
+
+img.photos {
+  max-width: 350px;
+  border-radius: 25px;
+}
+
+.image_show {
+  float: left;
+  margin-right: 40px;
+  margin-bottom: 30px;
+  overflow: hidden;
+}
+
+.header_image {
+  height: 350px;
+  width: 100%;
+}
+
+/* slide show for images */
+.slideshow_content_box {
+  overflow: hidden;
+  vertical-align: middle;
+  text-align: justify;
+}
 
 #slideshow {
     position: relative;
@@ -300,13 +167,145 @@ a {
   box-shadow: 0 0 15px rgba(0,0,0,0.4);
 }
 
-.image_show {
-  float: left;
-  margin-right: 40px;
-  margin-bottom: 30px;
-  overflow: hidden;
+
+// google map for city show and blog posts show
+#map {
+  width: 100% !important;
+  padding-top: 100%; // using padding top to ensure aspect ratio.
+  overflow: hidden !important;
+  border-radius: 25px;
 }
 
+#posts_div:hover{
+  filter: saturate(120%);
+}
+
+/* Comment box */
+#txt_area_comments{
+  margin-left: 0px;
+  height: 50px;
+  width: 400px;
+}
+
+.delete_comment{
+  font-size: 16px;
+  color: rgb(156, 77, 119) !important;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.delete_comment:hover{
+  font-weight: bold !important;
+}
+
+#comments_div > p {
+  text-align: left;
+}
+#comments_div > a {
+  text-align: right;
+  float: right;
+}
+.comment_div{
+  text-align: left;
+  border-style: ridge;
+}
+
+#comments_div{
+  border-style: outset;
+  border-radius: 15px;
+  background-color: rgba(154, 154, 154, 0.3);
+}
+
+.post_title{
+  display: inline;
+}
+
+.commentbox {
+  margin-bottom: 0;
+}
+
+/* weather widget */
+#weather {
+  text-align: center;
+  border-style: outset;
+  background-color: rgba(154, 154, 154, 0.3);
+  width: 100%;
+  border-radius: 15px;
+}
+
+
+/* homepage display parallax scrolling */
+#welcome_page {
+  letter-spacing: -15px;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 170px;
+  font-weight: 600;
+  line-height: 200px;
+}
+
+.MainContainer {
+  transform-style: preserve-3d;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.ContentContainer {
+  position: relative;
+  display: block;
+  background-color: white;
+  z-index: 1;
+  width: 100%;
+}
+
+.Content {
+  max-width: 850px;
+  margin: 0 auto;
+  padding: 35px 0;
+}
+
+.intro {
+  margin: 75px 0;
+}
+
+
+.ParallaxContainer {
+  display: flex;
+  flex: 1 0 auto;
+  position: relative;
+  z-index: -1;
+  height: 107vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  transform: translateZ(-1px) scale(2);
+  background: url('http://www.victorianielsens.se/wp-content/uploads/2017/10/travel.jpg');
+  background-size: cover;
+  background-color: rgb(250,228, 216);
+}
+
+
+.MainContainer {
+  perspective: 1px;
+  transform-style: preserve-3d;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.ContentContainer {
+  display: block;
+  position: relative;
+  background-color: white;
+  z-index: 1;
+}
+
+
+
+
+/* main content */
 .content_box {
   overflow: hidden;
   padding: 20px 100px;
@@ -314,29 +313,7 @@ a {
   text-align: justify;
 }
 
-.slideshow_content_box {
-  overflow: hidden;
-  vertical-align: middle;
-  text-align: justify;
-}
 
-li {
-  list-style: none;
-}
-
-.edit_link {
-  font-size: 18px;
-}
-
-html, body {
-  height: 100%;
-}
-
-h2 {
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-}
 
 #welcome {
   margin: 0 auto;
@@ -346,6 +323,7 @@ h2 {
   padding-bottom: 15px;
 }
 
+/* log in form */
 #login_div {
   text-align: center;
   background-color: rgba(250, 250, 250, 0.4);
@@ -367,11 +345,7 @@ h2 {
   right: 0;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  color: rgba(42, 42, 42, 0.8);
-}
+
 
 body {
   position: relative;
@@ -392,7 +366,7 @@ body {
     overflow: hidden;
     padding-bottom:30px;
 
-    div#menu {
+    div#menu { // toggle menu bar
       z-index: 999999;
       cursor: pointer;
       display: block;
@@ -418,8 +392,7 @@ body {
       float: right;
       right: 0px;
       min-height: 100%;
-      // background-color: rgba(154, 154, 154, 0.3);
-      &.small_content {
+      &.small_content { // when menu toggle is clicked, page shrinks
         padding-left: 10px;
         width: calc(100% - 320px);
       }
