--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,8 +21,10 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-6 col-sm-6">
-
+        <%= cl_image_tag @post.image, class: 'photos' %>
+        <br><br><br>
         <%= @post.content%>
+
       </div>
 
         <div class="col-sm-6">
