--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -281,7 +281,7 @@ img.photos {
   justify-content: center;
   align-items: center;
   transform: translateZ(-1px) scale(2);
-  background: url('http://www.victorianielsens.se/wp-content/uploads/2017/10/travel.jpg');
+  background: url('welcome-image.jpg');
   background-size: cover;
   background-color: rgb(250,228, 216);
 }
@@ -351,7 +351,7 @@ body {
   position: relative;
   font-family: 'Open Sans', sans-serif;
   background-attachment: fixed;
-  background-image: url('https://www.theriversouth.org/wp-content/uploads/2016/01/Light-Grey-Background-Tumblr-8.jpg');
+  background-image: url('travel-background.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -375,7 +375,7 @@ body {
       height: 65px;
       top: 10px;
       left: 10px;
-      background: url('https://cdn4.iconfinder.com/data/icons/tupix-1/30/list-512.png') no-repeat center center;
+      background: url('burger-icon.png') no-repeat center center;
       background-size: cover;
       padding: 0;
       text-indent: 9999px;
