--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -5,7 +5,7 @@
     <% @photos.each do |p| %>
       <div class="col-sm-4">
 
-<li><%= cl_image_tag p.image, class: 'post_main' %></li>
+<li><%= image_tag p.image, class: 'post_main' %></li>
 
 </div>
 <% end %>
