--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 
     <%= link_to post_path(p) do %>
         <strong><%= link_to p.title, post_path(p), class: 'city_link' %></strong>
-        <%= cl_image_tag p.image, class: 'post_main' %>
+        <%= image_tag p.image, class: 'post_main' %>
       </div>
       <% end %>
     <% end %>
