--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,12 +7,12 @@
   <%= link_to "Edit", edit_post_path(@post) %> |
   <%= link_to "Delete", post_path(@post), method: :delete %>
   <% end %>
-  
+
   <div class="content_box">
     <div id="slideshow">
         <% @post.city.photos.each do |p| %>
           <div class="slideshow_content_box">
-          <%= cl_image_tag p.image, {class: "header_image"} %>
+          <%= image_tag p.image, {class: "header_image"} %>
           </div>
         <% end  %>
     </div>
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-6 col-sm-6">
-        <%= cl_image_tag @post.image, class: 'photos' %>
+        <%= image_tag @post.image, class: 'photos' %>
         <br><br><br>
         <%= @post.content%>
 
