fixed users post privacy and cloudinary images vs local images

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,13 @@
 
     <%= link_to post_path(p) do %>
         <strong><%= link_to p.title, post_path(p), class: 'city_link' %></strong>
+        <% if p.image =~ /\./ %>
         <%= image_tag p.image, class: 'post_main' %>
+        <% else %>
+        <%= cl_image_tag p.image, class: 'post_main' %>
+        <% end %>
+
+
       </div>
       <% end %>
     <% end %>
