--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,11 @@
     <div id="slideshow">
         <% @post.city.photos.each do |p| %>
           <div class="slideshow_content_box">
-          <%= image_tag p.image, {class: "header_image"} %>
+            <% if p.image =~ /\./ %>
+            <%= image_tag p.image, class: 'header_image' %>
+            <% else %>
+            <%= cl_image_tag p.image, class: 'header_image' %>
+            <% end %>
           </div>
         <% end  %>
     </div>
@@ -21,7 +25,11 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-6 col-sm-6">
+        <% if @post.image =~ /\./ %>
         <%= image_tag @post.image, class: 'photos' %>
+        <% else %>
+        <%= cl_image_tag @post.image, class: 'photos' %>
+        <% end %>
         <br><br><br>
         <%= @post.content%>
 
