--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
     <span>By:&nbsp;&nbsp;</span></strong><%= link_to @post.user.username, user_path(@post.user) %>&nbsp;&nbsp;
   <i id="btn_like" class="fa fa-thumbs-<%=  @current_user.liked_posts.include?( @post ) ? 'down' : 'up' %>"></i>
     <span id="span_likes"><%= @post.liked_by.count %> </span>
-  <% if @current_user.present? && @post.user == @current_user %>
+  <% if @current_user.present? && @post.user == @current_user || @current_user.admin %>
   <%= link_to "Edit", edit_post_path(@post) %> |
   <%= link_to "Delete", post_path(@post), method: :delete %>
   <% end %>
